welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:5: error: type mismatch;
 found   : Unit
 required: () => Unit
movemnt(4)(left())
               ^Source:6: error: type mismatch;
 found   : Unit
 required: () => Unit
movemnt(4)(backward())
                   ^Source:7: error: type mismatch;
 found   : Unit
 required: () => Unit
movemnt(4)(right())
                ^Source:8: error: type mismatch;
 found   : Unit
 required: () => Unit
movemnt(2)(forward())
                  ^Source:9: error: type mismatch;
 found   : Unit
 required: () => Unit
movemnt(1)(left()) 
               ^